--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="강동재">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
-    <meta name="keywords"
-        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, 강동재, publisher, css3, html, markup, design">
+    <meta name="keywords" content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, 강동재, publisher, css3, html, markup, design">
     <title>크동 | KDONG</title>
 
     <!-- css -->
@@ -387,6 +386,27 @@
                                     <h5>PHP</h5>
                                     <p>PHP</p>
                                     <span>PHP</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+                    
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="refer-effect/parallaxEffext/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">PARALLAX</span>
+                                    <span class="overlay-text-thumb-donut">페럴렉스</span>
+                                    <span class="overlay-text-thumb1-donut">페럴렉스</span>
+                                    <span class="overlay-text-thumb2-donut">PARALLAX</span>
+                                </div>
+                                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>PARALLAX</h5>
+                                    <p>페럴렉스</p>
+                                    <span>PARALLAX</span>
                                 </div>
                             </div>
                         </a> 
