--- a/refer-effect/parallaxEffext/index.html
+++ b/refer-effect/parallaxEffext/index.html
@@ -9,6 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+
+    <style>
+        @media(max-width: 800px) {
+            #nav ul li a {
+                font-size: 12px;
+                width: 40px;
+                height: 30px;
+                line-height: 30px;
+            }
+        }
+    }
+    </style>
 </head>
 <body id="main" class="parallaxMain">
     <div id="canvas"></div>
@@ -25,6 +37,8 @@
             <li><a href="javascriptPE04.html">4</a></li>
             <li><a href="javascriptPE05.html">5</a></li>
             <li><a href="javascriptPE06.html">6</a></li>
+            <li><a href="javascriptPE07.html">7</a></li>
+            <li><a href="javascriptPE08.html">8</a></li>
         </ul>
         <ul>
             <li><a href="jqueryPE01.html">1</a></li>
@@ -33,6 +47,8 @@
             <li><a href="jqueryPE04.html">4</a></li>
             <li><a href="jqueryPE05.html">5</a></li>
             <li><a href="jqueryPE06.html">6</a></li>
+            <li><a href="jqueryPE07.html">7</a></li>
+            <li><a href="jqueryPE08.html">8</a></li>
         </ul>
     </nav>
 
