--- a/refer-effect/parallaxEffext/javascriptPE02.html
+++ b/refer-effect/parallaxEffext/javascriptPE02.html
@@ -67,7 +67,7 @@
 ​
     <!-- main -->
     <main>
-        <div class="paraScroll">scrollTop() : <span>0</span></div>
+        <div class="paraScroll">scrollTop : <span>0</span></div>
         <!-- //paraScroll -->
 
         <nav class="paraDot">
@@ -213,7 +213,7 @@
     <!-- //footer -->
 
     <!-- source -->
-    <div class="source02">
+    <div class="source">
         <button>소스보기</button>
     </div>
     <!-- //source -->
@@ -240,7 +240,7 @@
                 <div class="view-cont">
                     <div class="html">
 <pre><code class="language-html">&lt;main&gt;
-    &lt;div class="paraScroll"&gt;scrollTop() : &lt;span&gt;0&lt;/span&gt;&lt;/div&gt;
+    &lt;div class="paraScroll"&gt;scrollTop : &lt;span&gt;0&lt;/span&gt;&lt;/div&gt;
     &lt;!-- //paraScroll --&gt;
 
     &lt;nav class="paraDot"&gt;
@@ -734,7 +734,7 @@ window.addEventListener("scroll", () => {
         });
 
         //source
-        modalPE02();
+        modalPE01();
     </script>
     <!-- //script -->
 </body>
