--- a/refer-effect/parallaxEffext/jqueryPE02.html
+++ b/refer-effect/parallaxEffext/jqueryPE02.html
@@ -214,7 +214,7 @@
     <!-- //footer -->
 
     <!-- source -->
-    <div class="source02">
+    <div class="source">
         <button>소스보기</button>
     </div>
     <!-- //source -->
@@ -750,7 +750,7 @@ window.addEventListener("scroll", () => {
         });
 
         //source
-        modalPE02();
+        modalPE01();
     </script>
     <!-- //script -->
 </body>
