--- a/refer-effect/parallaxEffext/javascriptPE03.html
+++ b/refer-effect/parallaxEffext/javascriptPE03.html
@@ -29,6 +29,25 @@
         .paraNav li.active a {
             border-radius: 30px;
         }
+        
+        @media(max-width: 800px) {
+            .parallax .paraNav {
+                padding: 10px 4px 10px 4px;
+            }
+            .paraNav {
+                top: -500px;
+            }
+            .parallax .paraNav ul li a {
+                width: auto;
+            }
+            .parallax .paraNav ul li a {
+                font-size: 10px;
+            }
+            .paraNav li a {
+                white-space: nowrap;
+                padding: 5px 10px;
+            }
+        }
     </style>
 
 </head>
@@ -43,7 +62,7 @@
 ​
     <!-- main -->
     <main>
-        <div class="paraScroll">window.scrollY() : <span>0</span>px</div>
+        <div class="paraScroll">window.scrollY : <span>0</span>px</div>
         <!-- //paraScroll -->
 
         <nav class="paraNav">
