--- a/refer-effect/parallaxEffext/jqueryPE06.html
+++ b/refer-effect/parallaxEffext/jqueryPE06.html
@@ -331,11 +331,85 @@
 </code></pre>
                     </div>
                     <div class="css">
-<pre><code class="language-css">
+<pre><code class="language-css">.paraNav {
+    top: 20px;
+    transition: top 0.4s ease;
+}
+.paraNav.hide {
+    top: -200px;
+}
+.paraNav li a {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+}
+.paraNav li.active a {
+    border-radius: 30px;
+}
 </code></pre>
                     </div>
                     <div class="javascript">
-<pre><code class="language-js">
+<pre><code class="language-js">$(".paraNav ul li").click(function(e){
+    e.preventDefault();
+    let target = $(this);
+    let index = target.index();
+    let section = $(".content-item").eq(index);
+    let offset = section.offset().top;
+
+    $("html, body").animate({scrollTop: offset}, 600);
+})
+
+$(window).scroll(function(){
+    let scrollTop = $(window).scrollTop();
+
+    // let offset1 = scrollTop - $("#section1").offset().top;
+    // let offset2 = scrollTop - $("#section2").offset().top;
+    // let offset3 = scrollTop - $("#section3").offset().top;
+    // let offset4 = scrollTop - $("#section4").offset().top;
+    // let offset5 = scrollTop - $("#section5").offset().top;
+    // let offset6 = scrollTop - $("#section6").offset().top;
+    // let offset7 = scrollTop - $("#section7").offset().top;
+    // let offset8 = scrollTop - $("#section8").offset().top;
+    // let offset9 = scrollTop - $("#section9").offset().top;
+    
+
+    // $("#section1").css({transform: "translateX("+offset1+"px)"});
+    // $("#section2").css({transform: "translateX("+offset2+"px)"});
+    // $("#section3").css({transform: "translateX("+offset3+"px)"});
+    // $("#section4").css({transform: "translateX("+offset4+"px)"});
+    // $("#section5").css({transform: "translateX("+offset5+"px)"});
+    // $("#section6").css({transform: "translateX("+offset6+"px)"});
+    // $("#section7").css({transform: "translateX("+offset7+"px)"});
+    // $("#section8").css({transform: "translateX("+offset8+"px)"});
+    // $("#section9").css({transform: "translateX("+offset9+"px)"});
+
+    // for문
+    // for(let i=1; i&lt;10; i++){
+    //     let offset = scrollTop - $("#section"+i).offset().top;
+    //     $("#section"+i).css({transform: "translateX("+offset+"px)"});
+    //     // $("#section"+i+ " .desc").css({transform: "translateX("+offset+"px)"});
+    // };
+
+    // each문
+    $(".content-item").each(function(index){
+        let offset1 = (scrollTop - $(this).offset().top) * 0.1;
+        let offset2 = (scrollTop - $(this).offset().top) * 0.2;
+
+        $(this).find(".img-jq").css({transform: "translateY("+ offset2 +"px)"});
+        $(this).find(".desc").css({transform: "translateY("+ offset1 +"px)"});
+
+        // 메뉴
+        if(scrollTop > $(this).offset().top - 2){
+            $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
+        }
+    });
+
+    // 출력용
+    $(".paraScroll span").text(scrollTop);
+});
+
+//source
+modalPE01();
 </code></pre> 
                     </div>
                 </div>
