--- a/tetris/tetris.html
+++ b/tetris/tetris.html
@@ -17,6 +17,12 @@
         <div class="playground">
             <ul></ul>
         </div>
+        <div class="pause">
+            <button>정지</button>
+        </div>
+        <div class="play">
+            <button>시작</button>
+        </div>
     </div>
 
     <script src="js/tetris.js" type="module"></script>
