--- a/refer-effect/sliderEffect/jquerySE06.html
+++ b/refer-effect/sliderEffect/jquerySE06.html
@@ -12,10 +12,10 @@
     <style>
         /* slider */
         .slider-wrap {
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh;
         }
         .slider-img {
             position: absolute;
@@ -31,7 +31,7 @@
         }
         .slider-inner {
             position: relative;
-            width: 4000px;
+            /* width: 3200px; */
             height: 480px;
             overflow: hidden;
         }
@@ -68,9 +68,54 @@
         .slider-inner .slider::before {
             content: attr(data-name);
         }
+
+        .slider-btn a {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 1000;
+            width: 50px;
+            height: 50px;
+            background: rgba(0,0,0,.4);
+            text-align: center;
+            line-height: 50px;
+            transition: all 0.2s;
+            display: block;
+            color: #fff;
+            text-decoration: none;
+        }
+        .slider-btn a:hover {
+            background: rgba(241, 96, 86, 1);
+        }
+        .slider-btn .prev {
+            left: 0;
+        }
+        .slider-btn .next {
+            right: 0;
+        }
+
+        .slider-dot {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 20px;
+        }
+        .slider-dot .dot {
+            width: 20px;
+            height: 20px;
+            background: rgba(0,0,0,.4);
+            display: inline-block;
+            border-radius: 50%;
+            transition: all .3s;
+            text-indent: -9999px;
+            margin: 3px;
+        }
+        .slider-dot .dot.active {
+            background: rgba(255,255,255,.9);
+        }
     </style>
 </head>
-<body class="bg bg30 brown">
+<body class="bg bg14 brown">
 
     <!-- contents -->
     <main>
@@ -78,21 +123,32 @@
             <div class="slider-img">
                 <div class="slider-inner">
                     <div class="slider" data-name="이미지1">
-                        <img src="../assets/img/bg21.jpg" alt="이미지1">
+                        <img src="../assets/img/bg12.jpg" alt="이미지1">
                     </div>
                     <div class="slider" data-name="이미지2">
-                        <img src="../assets/img/bg22.jpg" alt="이미지2">
+                        <img src="../assets/img/bg19.jpg" alt="이미지2">
                     </div>
                     <div class="slider" data-name="이미지3">
-                        <img src="../assets/img/bg23.jpg" alt="이미지3">
+                        <img src="../assets/img/bg17.jpg" alt="이미지3">
                     </div>
                     <div class="slider" data-name="이미지4">
-                        <img src="../assets/img/bg29.jpg" alt="이미지4">
+                        <img src="../assets/img/bg16.jpg" alt="이미지4">
                     </div>
                     <div class="slider" data-name="이미지5">
-                        <img src="../assets/img/bg28.jpg" alt="이미지5">
+                        <img src="../assets/img/bg15.jpg" alt="이미지5">
                     </div>
                 </div>
+            </div>
+            <div class="slider-btn">
+                <a href="#" class="prev">prev</a>
+                <a href="#" class="next">next</a>
+            </div>
+            <div class="slider-dot">
+                <!-- <a href="#" class="dot active">1</a>
+                <a href="#" class="dot">2</a>
+                <a href="#" class="dot">3</a>
+                <a href="#" class="dot">4</a>
+                <a href="#" class="dot">5</a> -->
             </div>
         </div>
     </main>
@@ -100,8 +156,8 @@
 
     <!-- info -->
     <div class="info">
-        <h1><a href="index.html">Slider Effect03 - jquery</a></h1>
-        <p>이미지 슬라이드 - 좌로 움직이기(연속적으로)</p>
+        <h1><a href="index.html">Slider Effect06 - jquery</a></h1>
+        <p>이미지 슬라이드 - 닷메뉴 추가</p>
     </div>
 
     <div class="info right">
@@ -111,13 +167,19 @@
             <li><a href="javascriptSE03.html">3</a></li>
             <li><a href="javascriptSE04.html">4</a></li>
             <li><a href="javascriptSE05.html">5</a></li>
+            <li><a href="javascriptSE06.html">6</a></li>
+            <li><a href="javascriptSE07.html">7</a></li>
+            <li><a href="javascriptSE08.html">8</a></li>
         </ul>
         <ul>
             <li><a href="jquerySE01.html">1</a></li>
             <li><a href="jquerySE02.html">2</a></li>
-            <li class="active"><a href="jquerySE03.html">3</a></li>
+            <li><a href="jquerySE03.html">3</a></li>
             <li><a href="jquerySE04.html">4</a></li>
             <li><a href="jquerySE05.html">5</a></li>
+            <li class="active"><a href="jquerySE06.html">6</a></li>
+            <li><a href="jquerySE07.html">7</a></li>
+            <li><a href="jquerySE08.html">8</a></li>
         </ul>
     </div>
 
@@ -197,22 +259,58 @@
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
-        const sliderWrap = $(".slider-wrap");
-        const sliderImg = $(".slider-img");
         const sliderInner = $(".slider-inner");
         const slider = $(".slider");
+        const sliderBtn = $(".slider-btn");
+        const sliderDot = $(".slider-dot");
 
-        let currentIndex = 0;
+        let sliderCount = slider.length;
         let sliderWidth = slider.width();
+        let sliderTotalWidth = sliderWidth * sliderCount;
+        let currentIndex = 0;
+        let dotIndex = "";
 
-        // 콜백함수? 재귀함수?
-        setInterval(function(){
-            sliderInner.animate({left: -sliderWidth}, 400, function(){
-                $(".slider:first-child").appendTo(sliderInner); //appendTo 뒤에다가 추가한다. eq는 사용못함, 캡쳐사진 참고
-                sliderInner.css("left", "");
-            });
-        }, 3000);
+        // 이미지 가로값 셋팅
+        sliderInner.css({width: sliderTotalWidth});
 
+        // 닷 버튼 생성
+        // 이미지 갯수만큼 닷 메뉴 생성
+        slider.each(function(index){
+            dotIndex += "<a href='#' class='dot'>" + index + "</a>";
+        });
+        sliderDot.html(dotIndex);
+        sliderDot.find("a").eq(currentIndex).addClass("active");
+
+        // 이미지 움직이기
+        function gotoSlider(num){
+            sliderInner.animate({left: -sliderWidth * num}, 500, "easeInQuart");
+            currentIndex = num;
+            sliderDot.find("a").removeClass("active").eq(currentIndex).addClass("active");
+        };
+
+        // 닷 메뉴 클릭하기
+        sliderDot.on("click", "a", function(e){
+            e.preventDefault();
+            gotoSlider($(this).index());
+        });
+
+        // 버튼 클릭하기
+        // sliderBtn.click(function(){});
+        sliderBtn.on("click", "a", function(e){
+            e.preventDefault();
+            let nextIndex = (currentIndex + 1) % sliderCount;
+            let prevIndex = (currentIndex - 1) % sliderCount;
+
+            if(currentIndex == 0) prevIndex = sliderCount - 1;
+
+            if($(this).hasClass("prev")){
+                gotoSlider(prevIndex); 
+            } else {
+                gotoSlider(nextIndex);
+            }
+            
+        });
+        
         // 소스보기 실행함수
         modal();
     </script>
