--- a/site/index.html
+++ b/site/index.html
@@ -137,6 +137,9 @@
                     <p>코드 보기 - test01 <a href="test01.html">View</a></p>
                     <p>코드 보기 - test02 <a href="test02.html">View</a></p>
                     <p>코드 보기 - test03 <a href="test03.html">View</a></p>
+                    <p>코드 보기 - test04 <a href="test04.html">View</a></p>
+                    <p>코드 보기 - test05 <a href="test05.html">View</a></p>
+                    <p>코드 보기 - test06 <a href="test06.html">View</a></p>
                 </div>
                 <!-- //Intro6 -->
 
