--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                     </div>
                     <div class="header_icon">
                         <ul>
-                            <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
-                                        aria-hidden="true"></i><span>twitter</span></a></li>
+                            <!-- <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
+                                        aria-hidden="true"></i><span>twitter</span></a></li> -->
                             <li><a href="https://codepen.io/kdong1224" target="_blank"><i class="fa fa-codepen"
                                         aria-hidden="true"></i><span>codepen</span></a></li>
                             <li><a href="https://kdong1224.github.io/dothome21/" target="_blank"><i class="fa fa-github"
                                         aria-hidden="true"></i><span>github</span></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
-                                        class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-                            <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble"
-                                        aria-hidden="true"></i><span>dribbble</span></a></li>
+                            <!-- <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
+                                        class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li> -->
+                            <!-- <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble"
+                                        aria-hidden="true"></i><span>dribbble</span></a></li> -->
                             <li><a href="https://www.instagram.com/noyclah_jdk/" target="_blank"><i
                                         class="fa fa-instagram" aria-hidden="true"></i><span>instagram</span></a></li>
                         </ul>
@@ -447,7 +447,7 @@
                                     <span class="overlay-text-thumb1-donut">마우스 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">MOUSEEFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                                <img src="assets/img/svg-apple.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>MOUSEEFFECT</h5>
                                     <p>마우스 이펙트</p>
@@ -544,7 +544,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="http://vefy21.dothome.co.kr/pages/main.php" target="_blank">
+                        <a href="https://github.com/KDONG1224/dothome21/tree/main/vefy" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">PROJECT SOURCE</span>
