--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -20,7 +20,9 @@
     <nav id="nav">
         <ul>
             <li><a href="quiz/quiz01.html">1</a></li>
-            <li><a href="#">2</a></li>
+            <li><a href="quiz/quiz02.html">2</a></li>
+            <li><a href="quiz/quiz03.html">3</a></li>
+            <li><a href="quiz/quiz04.html">4</a></li>
         </ul>
     </nav>
 
